[C-656] Fix z-index for collection header overflow menu popup (#1549)

--- a/apps/audius-client/packages/stems/src/components/Popup/Popup.module.css
+++ b/apps/audius-client/packages/stems/src/components/Popup/Popup.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   position: absolute;
+  z-index: 1;
 }
 
 .popup {
